--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "content_scripts": [
     {
       "matches": ["https://medium.com/*/*"],
-      "js": ["index.js"]
+      "js": ["index.js"],
+      "css": ["style.css"]
     }
   ],
   "action": {
