--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,17 @@
   "manifest_version": 3,
   "content_scripts": [
     {
-      "matches": ["https://medium.com/*/*"],
+      "matches": ["https://medium.com/*/**"],
       "js": ["index.js"],
       "css": ["style.css"]
     }
   ],
-  "action": {
-    "default_popup": "index.html"
-  }
+  "background": {
+    "service_worker": "service_worker.js",
+    "type": "module"
+  },
+  "permissions": [
+    "tabs",
+    "activeTab"
+  ]
 }
