--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,21 +12,21 @@
   "background": {
     "service_worker": "background.js"
   },
-  "action": {
-    "default_title": "Medium Navigator",
-    "default_popup": "popup.html"
-  },
   "permissions": [
+    "tabs",
+    "activeTab",
     "storage"
   ],
   "content_scripts": [
     {
       "matches": [
-        "<all_urls>"
+        "https://medium.com/*/*"
       ],
-      "run_at": "document_idle",
       "js": [
         "contentScript.js"
+      ],
+      "css": [
+        "style/navigatorStyle.css"
       ]
     }
   ]
