feat: run_at add, matches add

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,14 +20,16 @@
   "content_scripts": [
     {
       "matches": [
-        "https://medium.com/*/*"
+        "https://medium.com/*/*",
+        "https://*.medium.com/*"
       ],
       "js": [
         "contentScript.js"
       ],
       "css": [
         "style/navigatorStyle.css"
-      ]
+      ],
+      "run_at": "document_end"
     }
   ]
 }
