--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.7",
     "prettier": "^2.8.8",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.10.0"
