--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Medium Navigator",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "Enhance Medium with our extension: Quick, easy navigation for a smoother reading experience!",
   "icons": {
     "16": "icons/icon-16.png",
@@ -15,8 +15,7 @@
   "content_scripts": [
     {
       "matches": [
-        "https://medium.com/*/*",
-        "https://*.medium.com/*"
+        "<all_urls>"
       ],
       "exclude_matches": [
         "https://medium.com/new-story",
