chore: update package scripts and styles, remove unused CSS file, and enhance popup UI structure

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -34,7 +34,7 @@
         "contentScript.js"
       ],
       "css": [
-        "style/navigatorStyle.css"
+        "styles/navigatorStyle.css"
       ],
       "run_at": "document_end"
     }
