--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "webpack --mode=development --watch --config config/webpack.config.js",
     "build": "webpack --mode=production --config config/webpack.config.js",
-    "pack": "node pack.js",
+    "pack": "ts-node pack.ts",
     "repack": "npm run build && npm run pack",
     "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\""
   },
@@ -19,6 +19,7 @@
     "mini-css-extract-plugin": "^2.7.7",
     "prettier": "^2.8.8",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "webpack": "^5.94.0",
     "webpack-cli": "^4.10.0",
