--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "medium-navigator",
   "version": "2.0.0",
-  "description": "Enhance Medium with our extension: Quick, easy navigation for a smoother reading experience!",
+  "description": "A navigation extension that makes exploring Medium blogs effortless.",
   "private": true,
   "scripts": {
     "watch": "webpack --mode=development --watch --config config/webpack.config.js",
     "build": "webpack --mode=production --config config/webpack.config.js",
-    "pack": "ts-node pack.ts",
+    "pack": "node pack.js",
     "repack": "npm run build && npm run pack",
     "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\""
   },
