--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Medium Navigator",
   "version": "2.0.0",
-  "description": "Enhance Medium with our extension: Quick, easy navigation for a smoother reading experience!",
+  "description": "A navigation extension that makes exploring Medium blogs effortless.",
   "icons": {
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
@@ -36,7 +36,7 @@
       "css": [
         "styles/navigatorStyle.css"
       ],
-      "run_at": "document_end"
+      "run_at": "document_idle"
     }
   ],
   "permissions": [
